--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "netvue-clone",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
