--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,5 +6,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: npm install
-      - run: npm run dev
+      - run: npm run build
+
       
