--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 4173",
-    "deploy": "cd dist && cp index.html 404.html && cd .. && gh-pages -d dist"
+    "preview": "vite preview --port 4173"
   },
   "dependencies": {
     "axios": "^1.1.2",
